# PromptGroundBox

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  setup_project.py
.github/workflows/: ci.yml
configs/: defaults.yaml
runs/vehicles_A/visuals/test2017/: index.html  table_best_f1_iou50.csv  table_cocoeval_metrics.csv  visual_manifest.json
runs/vehicles_A/visuals/train2017/: index.html  table_best_f1_iou50.csv  table_cocoeval_metrics.csv  visual_manifest.json
runs/vehicles_A/visuals/val2017/: index.html  table_best_f1_iou50.csv  table_cocoeval_metrics.csv  visual_manifest.json
src/promptgroundboxbench/: __init__.py  cli.py  config.py  types.py
src/promptgroundboxbench/benchmarks/: speed.py
src/promptgroundboxbench/demo/: gradio_app.py
src/promptgroundboxbench/engines/: __init__.py  base.py  grounding_dino.py  yolo.py
src/promptgroundboxbench/eval/: coco.py
src/promptgroundboxbench/utils/: __init__.py  draw.py  image.py  io.py  prompt.py  timing.py
tests/: test_prompt.py  test_types.py
tools/: analyze_vehicles_report.py  eval_vehicles_A.py  make_coco_single_class.py  visualize_vehicles_run.py
